--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Agregar esta etiqueta base -->
-    <base href="/" />
+    <!-- Remove the base tag as it's causing conflicts with routing -->
     <title>RV Parks For Sale | RoverPass</title>
     <meta name="description" content="Find RV parks and campgrounds for sale across the United States. Browse exclusive listings or list your property for free with RoverPass." />
     <meta name="author" content="RoverPass" />
