--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Add favicon link pointing to the favicon.ico in the assets directory -->
+    <link rel="icon" href="/src/assets/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/src/assets/favicon.ico" type="image/x-icon" />
     <!-- Remove the base tag as it's causing conflicts with routing -->
     <title>RV Parks For Sale | RoverPass</title>
     <meta name="description" content="Find RV parks and campgrounds for sale across the United States. Browse exclusive listings or list your property for free with RoverPass." />
